// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`F0BlurView Snapshots renders with children 1`] = `
<View
  className="overflow-hidden"
  experimentalBlurMethod="none"
  intensity={40}
  style={
    [
      {},
      undefined,
    ]
  }
  testID="blur"
  tint="default"
>
  <Text>
    Content over blur
  </Text>
</View>
`;

exports[`F0BlurView Snapshots renders with custom intensity 1`] = `
<View
  className="overflow-hidden"
  experimentalBlurMethod="none"
  intensity={80}
  style={
    [
      {},
      undefined,
    ]
  }
  testID="blur"
  tint="default"
/>
`;

exports[`F0BlurView Snapshots renders with dark tint 1`] = `
<View
  className="overflow-hidden"
  experimentalBlurMethod="none"
  intensity={40}
  style={
    [
      {},
      undefined,
    ]
  }
  testID="blur"
  tint="dark"
/>
`;

exports[`F0BlurView Snapshots renders with defaults 1`] = `
<View
  className="overflow-hidden"
  experimentalBlurMethod="none"
  intensity={40}
  style={
    [
      {},
      undefined,
    ]
  }
  testID="blur"
  tint="default"
/>
`;
